<resources>
    <string name="app_name">myMart</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint" translatable="false">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login">Login</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">myMart</string>
    <string name="nav_header_subtitle">admin.mymart@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Category</string>
    <string name="menu_slideshow">Setting</string>
    <string name="feedback">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="current_password">Current Password</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="close">Close</string>
    <string name="category_status">Category Status</string>
    <string name="refresh">Refresh</string>
    <string name="update">Update</string>
    <string name="category_id">Category Id</string>
    <string name="supplier">Suppliers</string>
    <string name="supplierid">Supplier ID : </string>
    <string name="comname">Company Name : </string>
    <string name="website">"Website : </string>
    <string name="fname">"First Name : </string>
    <string name="lname">"Last Name : </string>
    <string name="contact">"Contact : </string>
    <string name="email">"Email : </string>
    <string name="add1">Address 1 : </string>
    <string name="add2">"Address 2 : </string>
    <string name="state">"State : </string>
    <string name="city">"City : </string>
    <string name="pincode">"Pincode : </string>
    <string name="username">"Username: </string>
    <string name="admin_id">Admin ID</string>
    <string name="makusername">mak.p006</string>
    <string name="karmausername">karma006</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile">Profile</string>
    <string name="product">Products</string>
    <string name="logout">Log Out</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="update_product">Update Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_category">Product Category</string>
    <string name="product_status">Product Status</string>
    <string name="product_mrp">Product MRP</string>
    <string name="add">Add</string>
    <string name="add_product">Add Product</string>
    <string name="categories">Categories</string>
    <string name="orders">Orders</string>
    <string name="add_new_task">Add New Task</string>
    <string name="add_task">Add Task</string>
    <string name="stock">Stock</string>
    <string name="product_supplier">Product Supplier</string>
    <string name="supplier_price">Supplier Price</string>
    <string name="sale_price">Sale Price</string>
    <string name="quantity">Quantity</string>
    <string name="add_stock">Add Stock</string>
    <string name="update_stock">Update Stock</string>
    <string name="reports">Reports</string>
    <string name="low_stocks">Low Stocks</string>

</resources>