<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_supplier"
            android:icon="@drawable/ic_baseline_recent_actors_24"
            android:title="@string/supplier" />

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/category_24"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/product"/>

        <item
            android:id="@+id/nav_stock"
            android:icon="@drawable/ic_shipping"
            android:title="@string/stock" />

        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report"
            android:title="@string/reports"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
    <!-- <group
         android:id="@+id/personal"
         android:checkableBehavior="single">


     </group>-->
</menu>