<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            android:id="@+id/heading_dialogboxstock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/headerTextSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/stock_id"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/full_productname"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:padding="11dp"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/product_name"
                android:textColor="@color/text"
                android:textSize="14dp" />

            <Spinner
                android:id="@+id/stockproduct_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/full_suppliername"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:padding="11dp"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/product_supplier"
                android:textColor="@color/text"
                android:textSize="14dp" />

            <Spinner
                android:id="@+id/stockproductsupplier_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/full_categoryname"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:padding="11dp"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/category_name"
                android:textColor="@color/text"
                android:textSize="14dp" />

            <Spinner
                android:id="@+id/stockcategory_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:textColorHint="@color/text">

            <EditText
                android:id="@+id/supplier_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:hint="@string/supplier_price"
                android:maxLines="1"
                android:inputType="number"
                android:textSize="@dimen/newsMoreTextSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:textColorHint="@color/text">

            <EditText
                android:id="@+id/sale_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:hint="@string/sale_price"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="@dimen/newsMoreTextSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:textColorHint="@color/text">

            <EditText
                android:id="@+id/product_stock_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:hint="@string/quantity"
                android:maxLines="1"
                android:inputType="number"
                android:textSize="@dimen/newsMoreTextSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/btn_close_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="5"
                android:text="@string/close" />

            <Button
                android:id="@+id/btn_addupdatestock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_weight="5" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>